--- a/tqs_project/pom.xml
+++ b/tqs_project/pom.xml
@@ -44,7 +44,10 @@
             <artifactId>json</artifactId>
             <version>20210307</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
