--- a/tqs_project/pom.xml
+++ b/tqs_project/pom.xml
@@ -74,6 +74,18 @@
             <version>3.4.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>6.10.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit-platform-engine</artifactId>
+            <version>6.10.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
