Made some rest-assured tests, kinda simple ones but It's better than nothing ig

--- a/tqs_project/pom.xml
+++ b/tqs_project/pom.xml
@@ -86,6 +86,28 @@
             <version>6.10.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version> 3.3.0 </version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured-common</artifactId>
+            <version> 3.3.0 </version>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-path</artifactId>
+            <version> 3.3.0 </version>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>xml-path</artifactId>
+            <version> 3.3.0 </version>
+        </dependency>
     </dependencies>
 
     <build>
